[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Register.gd" type="Script" id=1]
[ext_resource path="res://assets/images/background.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/buttons/GoBackButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/buttons/RegisterSubmitButton.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 3 )

[node name="Register" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 720.0
margin_bottom = 1284.0
rect_pivot_offset = Vector2( 344.216, 394.477 )
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="."]
margin_top = 4.0
margin_right = 720.0
margin_bottom = 355.0
custom_fonts/font = SubResource( 1 )
text = "Ultimate
Tic-Tac-Toe
Battle"
align = 1

[node name="UserIDText" type="LineEdit" parent="."]
margin_left = 115.0
margin_top = 419.16
margin_right = 602.0
margin_bottom = 499.16
custom_fonts/font = SubResource( 2 )
text = "User ID (number)"

[node name="NameText" type="LineEdit" parent="."]
margin_left = 115.0
margin_top = 549.407
margin_right = 602.0
margin_bottom = 625.407
custom_fonts/font = SubResource( 2 )
text = "Name"

[node name="PasswordText" type="LineEdit" parent="."]
margin_left = 115.0
margin_top = 665.406
margin_right = 602.0
margin_bottom = 741.406
custom_fonts/font = SubResource( 2 )
text = "Password"
secret = true

[node name="GoBackButton" parent="." instance=ExtResource( 4 )]
margin_left = 247.375
margin_top = 1119.77
margin_right = 472.375
margin_bottom = 1247.77

[node name="RegisterSubmitButton" parent="." instance=ExtResource( 5 )]
margin_left = 223.954
margin_top = 775.789
margin_right = 497.954
margin_bottom = 903.789
[connection signal="pressed" from="GoBackButton" to="." method="_on_GoBackButton_pressed"]
[connection signal="pressed" from="RegisterSubmitButton" to="." method="_on_RegisterSubmitButton_pressed"]
